<resources>
    <string name="app_name">Ultimate Android</string>
    <string name="hello">Show Image!</string>
    <string name="snackbar">SNACKBAR</string>
    <string name="image">IMAGE</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome!</string>
    <string name="widgets">Widgets</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="about">About</string>
    <string name="coffee">I like coffee</string>
    <string name="webview">WebView</string>
    <string name="network">Network</string>
    <string name="battery_status">Battery Status</string>
    <string name="listview">ListViews</string>
    <string name="custom_listview">Custom ListView</string>
    <string name="simple_listview">Simple ListView</string>
    <string name="image_listview">Custom ListView with Images</string>
</resources>
