<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snehpandya.ultimateandroid.WidgetsActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:layout_margin="16dp"
        android:hint="@string/name"/>

    <RadioGroup
        android:id="@+id/radio"
        style="@style/RadioGroupStyle"
        android:layout_below="@id/edittext">

        <RadioButton
            android:id="@+id/male"
            style="@style/RadioButtonStyle"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/female"
            style="@style/RadioButtonStyle"
            android:text="@string/female"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio"
        android:layout_margin="16dp"
        android:weightSum="3">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toast"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="submit"
            android:text="@string/submit"/>
    </LinearLayout>

    <TextView
        android:id="@+id/showTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:layout_margin="16dp"
        android:textColor="#000000"
        android:textSize="20sp"/>
</RelativeLayout>